--- a/trunk/themes/adminlte/css/style.css
+++ b/trunk/themes/adminlte/css/style.css
@@ -1420,6 +1420,27 @@ body > .header .logo .icon {
     width: 100%;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
 }
+.box.box-solid.box-primary{
+    border: 1px solid #3c8dbc;
+    border-top: none;
+}
+.box.box-solid.box-info{
+    border: 1px solid #00c0ef;
+    border-top: none;
+}
+.box.box-solid.box-danger{
+    border: 1px solid #f56954;
+    border-top: none;
+}
+.box.box-solid.box-warning{
+    border: 1px solid #f39c12;
+    border-top: none;
+}
+.box.box-solid.box-success{
+    border: 1px solid #00a65a;
+    border-top: none;
+}
+
 .box.box-primary {
     border-top-color: #3c8dbc;
 }
